@@ -1,0 +1,35 @@
+[uwsgi]
+
+# try to autoload appropriate plugin if "unknown" option has been specified
+autoload = true
+
+# enable master process manager
+master = true
+
+# spawn 2 uWSGI worker processes
+workers = 2
+
+# automatically kill workers on master's death
+no-orphans = true
+
+# write master's pid in file
+pidfile = /var/run/uwsgi.pid
+
+# bind to UNIX socket file
+socket = /var/run/uwsgi.socket
+
+# set mode of created UNIX socket
+chmod-socket = 660
+
+# place timestamps into log
+log-date = true
+
+# user identifier of uWSGI processes
+uid = uwsgi
+
+# group identifier of uWSGI processes
+gid = uwsgi
+
+# multi-app deployment
+emperor = /etc/uwsgi.d
+emperor-tyrant = false
